--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,19 @@
-name: birth_x_flutter
+name: birth_tu_flutter
 description: very special app
-
+author: HamP <hamzaabamboo@gmail.com>
+homepage: http://birth-tu.firebaseapp.com
+version: 0.0.1
 dependencies:
   flutter:
     sdk: flutter
-  audioplayer:
+  audioplayer: ^0.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+environment:
+    sdk: ">=1.19.0 <2.0.0"
 
 dev_dependencies:
   flutter_test:
